<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#F1E898"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <!--logo comes here-->

    <TextView
        android:id="@+id/about_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo_icon_content_description"
        app:srcCompat="@drawable/ic_clock_face" />

    <TextView
        android:id="@+id/about_page_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/dialog_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold" />


</LinearLayout>