<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/Current_time_card_View"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:contentPadding="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_time_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/current_time"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#5287AF" />

            <TextClock
                android:id="@+id/the_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:fontFamily="serif"
                android:format24Hour="hh:mm:ss"
                android:textColor="@color/black"
                android:textSize="60sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/start_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/round_button"
            android:text="@string/start_button_string"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/stop_button_string"
            android:textSize="28sp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/volume_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/volume_string"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/volume_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">
        <TextView
            android:id="@+id/volume_low_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume_low_string"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <SeekBar
            android:id="@+id/volume_seekBar"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="270dp"

            android:layout_height="wrap_content"
            android:progressBackgroundTint="#012B97" />
        <TextView
            android:id="@+id/volume_high_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume_high_string"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>


    <Button
        android:id="@+id/run_in_bg_button"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/run_in_bg_string"
        android:textColor="@color/white"
        android:textSize="16sp" />


</LinearLayout>